card section on mobile fixed

--- a/main.scss
+++ b/main.scss
@@ -43,9 +43,8 @@ $light-blue:  #8ACFE5;
 }
 
 body {
-background-color: white;
+background-color: zwhite;
 @include roboto;
-
 max-width: 100%;
 min-width: 480px; //min width for mobile
 }
@@ -194,6 +193,7 @@ color: white;
 background-color: $red;
 text-decoration: none;
 
+
  @include breakpoint($mobile-breakpoint) {
     height: 56px; 
     width: 250px;
@@ -287,13 +287,11 @@ text-decoration: none;
  display: flex;
  flex-direction: column;
  align-items: center;
-
  margin: 10px 100px;
 
  @include breakpoint($mobile-breakpoint) {
         margin: 0;
  }
-
  }
 
  h2 {
@@ -317,15 +315,21 @@ gap: 20px;
 
 overflow: hidden;
 flex-direction: row;
-flex-wrap: nowrap;
+
 
  @include breakpoint($mobile-breakpoint) {
+    justify-content: flex-start;
+    scroll-behavior: smooth;
  scroll-snap-type: x mandatory;
- overflow-x: visible;
+ overflow-x: auto;
 
- justify-content: flex-start;
+ padding-left: 40px;
+ padding-right: 0;
+ gap: 20px;
+width: 100%;
+
+
  }
-
  }
 
  .card {
@@ -334,13 +338,13 @@ flex-wrap: nowrap;
     background-color: white;
     margin: 10px;
     border-radius: 5px;
+    min-width: 300px;
     
     box-shadow: 0px 0px 4px 4px rgba(0,0,0,0.1);
 
     @include breakpoint($mobile-breakpoint) {
-
-    flex: 0 0 100%;
-    min-width: 100%;
+    flex: 0 0 calc(85%);
+   
  }
 
  }
@@ -443,12 +447,13 @@ margin-bottom: 200px;
 .split {
 display: flex;
 flex-direction: row;
-height: auto;
+height: 500px;
 width: 100%;
 
 
 @include breakpoint($mobile-breakpoint) {
     flex-direction: column;
+    height: auto;
 
  }
  
